Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5123

lprocfs_write_frac_u64_helper does not respect multiplier

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.6.0
    • Lustre 2.6.0
    • 3
    • 14132

      Working on LU-4856, I have made use of lprocfs_write_frac_u64_helper, which turns out to not work. Specifically, the mult arg is ignored because of this logic:

      units = 1;
      if (units)
      mult = mult < 0 ? -units : units;

      This led to sanity 101a setting the 64 bit converted max_cached_mb to 32 pages (not mb) - which hung in a way that may be interesting in it's own right.

            emoly.liu Emoly Liu
            schamp Stephen Champion
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: